  * checks/debhelper.pm:
    + [AB] Also recognize dh-exec's "=>" arrow if surrounded by tabs.
      (Closes: #877905)
  * checks/fields.{desc,pm}:
    + [NT] Add an info tag for packages that use "Priority: extra".  Thanks
      to Mattia Rizzolo for the suggestion.  (Closes: #870898)
  * checks/files.pm:
    + [CL] Ignore privacy breach violations in comments.  (Closes: #877421)
  * checks/{files,manpages,menu-format}.{desc,pm}:
    + [NT] Stop considering usr/man, usr/X11R6/bin and usr/X11R6/man as
      manpage directories / PATH directories to simplify some code paths.
      Nothing ships manpages in these directories and lintian emits tags
      to strongly discourage people from doing so.
  * checks/init.d.pm:
    + [CL] Avoid warning for init.d-script-not-marked-as-conffile when
      the init.d script does not exist; we will already be alerted via
      the init.d-script-not-included-in-package error.
  * checks/python.pm:
    + [CL] Move to "Type: source, binary" check type.
    + [CL] Also match packages named "python2-*" as relating to Python 2.x.
    + [CL] Warn about Django libraries that do not depend on Django itself.
      (Closes: #877292)
    + [CL] Do not emit python-foo-but-no-python3-foo for -common packages.
  * checks/scripts.desc:
    + [CL] Add missing example-script-uses-deprecated-nodejs-location tag.
      (Closes: #877142)
    + [NT] Apply patch from Mattia Rizzolo to improve the tag description
      for script-uses-deprecated-nodejs-location.
    + [CL] Actually check for a dependency on sensible-utils before
      emitting script-needs-depends-on-sensible-utils.  Thanks to Daniel
      Reichelt for the detailed bug report.  (Closes: #877439)
  * checks/standards-version.desc:
    + [CL] Correct invalid link to upgrading-checklist. Thanks to Dann
      Frazier for the report.  (Closes: #878184)
  * checks/watch-file.{pm,desc}:
    + [CL] Warn for debian/watch files using insecure URIs such as HTTP or