@@ -1,0 +1,5 @@
+Testname: files-python-module-has-overly-generic-name
+Version: 1.0
+Description: Test tags for Python modules with overly generic names
+Test-For:
+ python-module-has-overly-generic-name
